syntax = "proto3";
package virtengine.audit.v1;

import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/audit/v1";

// EventTrustedAuditorCreated defines an SDK message for when a trusted auditor is created.
message EventTrustedAuditorCreated {
  option (gogoproto.equal) = true;

  // Owner is the account bech32 address of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];

  // Auditor is the account address of the auditor.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string auditor = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "auditor",
    (gogoproto.moretags)  = "yaml:\"auditor\""
  ];
}

// EventTrustedAuditorDeleted defines an event for when a trusted auditor is deleted.
message EventTrustedAuditorDeleted {
  option (gogoproto.equal) = true;

  // Owner is the account bech32 address of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];

  // Auditor is the account address of the auditor.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string auditor = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "auditor",
    (gogoproto.moretags)  = "yaml:\"auditor\""
  ];
}

// EventAuditLogCreated defines an event for when an audit log entry is created.
message EventAuditLogCreated {
  option (gogoproto.equal) = true;

  // Log entry ID
  string id = 1 [
    (gogoproto.jsontag)   = "id",
    (gogoproto.moretags)  = "yaml:\"id\""
  ];

  // Block height
  int64 height = 2 [
    (gogoproto.jsontag)   = "height",
    (gogoproto.moretags)  = "yaml:\"height\""
  ];

  // Actor address
  string actor = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "actor",
    (gogoproto.moretags)  = "yaml:\"actor\""
  ];

  // Module name
  string module = 4 [
    (gogoproto.jsontag)   = "module",
    (gogoproto.moretags)  = "yaml:\"module\""
  ];

  // Action name
  string action = 5 [
    (gogoproto.jsontag)   = "action",
    (gogoproto.moretags)  = "yaml:\"action\""
  ];

  // Resource ID
  string resource_id = 6 [
    (gogoproto.jsontag)   = "resource_id,omitempty",
    (gogoproto.moretags)  = "yaml:\"resource_id,omitempty\""
  ];
}

// EventExportJobCreated defines an event for when an export job is created.
message EventExportJobCreated {
  option (gogoproto.equal) = true;

  // Export job ID
  string id = 1 [
    (gogoproto.jsontag)   = "id",
    (gogoproto.moretags)  = "yaml:\"id\""
  ];

  // Requester address
  string requester = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "requester",
    (gogoproto.moretags)  = "yaml:\"requester\""
  ];

  // Export format
  string format = 3 [
    (gogoproto.jsontag)   = "format",
    (gogoproto.moretags)  = "yaml:\"format\""
  ];
}

// EventExportJobCompleted defines an event for when an export job completes.
message EventExportJobCompleted {
  option (gogoproto.equal) = true;

  // Export job ID
  string id = 1 [
    (gogoproto.jsontag)   = "id",
    (gogoproto.moretags)  = "yaml:\"id\""
  ];

  // Number of entries exported
  int64 entry_count = 2 [
    (gogoproto.jsontag)   = "entry_count",
    (gogoproto.moretags)  = "yaml:\"entry_count\""
  ];

  // File path
  string file_path = 3 [
    (gogoproto.jsontag)   = "file_path",
    (gogoproto.moretags)  = "yaml:\"file_path\""
  ];
}

// EventExportJobFailed defines an event for when an export job fails.
message EventExportJobFailed {
  option (gogoproto.equal) = true;

  // Export job ID
  string id = 1 [
    (gogoproto.jsontag)   = "id",
    (gogoproto.moretags)  = "yaml:\"id\""
  ];

  // Error message
  string error = 2 [
    (gogoproto.jsontag)   = "error",
    (gogoproto.moretags)  = "yaml:\"error\""
  ];
}
